# anibench-benchmark

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT.md  GOVERNANCE.md  LICENSE  LICENSE-DATA  Makefile  PUBLIC_EXPORT_RECEIPT.json  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  codemeta.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: evidence-challenge.yml  methods-rfc.yml  new-study.yml
.github/workflows/: codeql.yml  pr.yml  release.yml
data/source_projections/v2/: EXTERNAL_SOURCE_ACQUISITION_LEDGER.json  all-of-us-cdrv9.json  aspree.json  calerie-phase-2-expanded.json  circulate-tpe-ivig.json  do-health-bio-age.json  dq-senolytic-bone.json  life-study.json  mitoimmune-urolithin-a.json  motrpac-human-pre-suspension-expanded.json  pearl-rapamycin.json  predict-1.json  sheba-sharp.json  snyder-ipop-ihmp-106.json  triim.json  uk-biobank.json  zoe-method.json
docs/: ACCESSIBILITY.md  ANTI_GAMING.md  API.md  CTGOV_50_TRIAL_STRESS_TEST.md  DATA_GOVERNANCE.md  DESIGN_STUDIO.md  EVALUATION.md  EVIDENCE_POLICY.md  HOW_TO_READ_ANIBENCH.md  INTAKE_AND_ADJUDICATION.md  PRODUCT_ACCEPTANCE_MATRIX.md  RELEASE.md  RELEASE_CHECKLIST.md  SCIENTIFIC_FOUNDATIONS.md  V2_METHODS_CANDIDATE.md  V2_OPTIMIZER.md
docs/audits/: CTGOV_50_TRIAL_STRESS_TEST_2026-07-14.json
evals/level1/: eval-card.json
examples/: optimizer_protocol_v2_example.py
examples/v2/: illustrative-design.json  illustrative-protocol-source.json
openapi/: anibench-v2-candidate.yaml
packaging/: PUBLIC_PACKAGE_ALLOWLIST.md
packaging/public_v2/: EXTERNAL_FIELD_PROVENANCE_RECEIPT.json  EXTERNAL_SOURCE_VERIFICATION_RECEIPT.json  REPOSITORY_ALLOWLIST.txt  SOURCE_COORDINATE_TABLE.csv
paper/v2/: AniBench_v2_benchmark_protocol.md  REPORTING_CHECKLIST.md  build_method_figures.py
schemas/v2/: design-assessment.schema.json  design-input.schema.json  event-manifest.schema.json  information-run.schema.json  intervention-design.schema.json  level1-coordinate-registry.schema.json  optimizer-protocol-input.schema.json  optimizer-protocol-result.schema.json  protocol-capacity-input.schema.json  protocol-capacity-result.schema.json  reference-registry.schema.json  uncertainty.schema.json
schemas/v3/: eval-comparison.schema.json  level1-role-aware-assessment.schema.json  level1-role-aware-target-authority.schema.json  level1-v2-to-v3-impact-receipt.schema.json
scripts/: __init__.py  assemble_release_candidate.py  build_docx_package.py  build_level1_target_v3.py  build_v2_external_corpus.py  export_public_repository.py  fetch_v2_external_sources.py  run_ctgov_50_stress_test.py  validate_code_red_release.py  verify_distribution_boundary.py  verify_external_field_receipts.py  verify_installed_studio.py  verify_release_metadata.py  verify_studio_browser.mjs
spec/v2/: parameter-space.json  reference-registry.json
spec/v2/authority/: causal-encoding.json  covariance-scenario-envelopes.json  event-unit-registry.json  manifest.json  measurement-operator-profiles.json  moderator-id-registry.json  parameter-space-prior-target.json  transport-encoding.json
spec/v2/level1/: biological-coordinate-registry.json
spec/v2/mechanics-fixtures/: illustrative-reference-2d.json
spec/v3/level1/: role-aware-target-requirements.v3.json
spec/v3/level1/migrations/: v2-to-v3-substantive-impact-receipt.json
src/anibench/: __init__.py  api.py  causal_v2.py  cli.py  comparison_v1.py  contracts_v2.py  design_v2.py  information_v2.py  intake.py  level1_assessment_v3.py  level1_target_v3.py  optimizer_protocol_v2.py  paths.py  protocol_capacity_v2.py  source_atlas_v2.py  studio.py  studio_product.py  uncertainty_v2.py  v2.py
src/anibench/contracts/: __init__.py  identifiers.py
src/anibench/release/: __init__.py  redact.py
tests/: test_ctgov_50_stress_test.py  test_distribution_boundary.py  test_eval_cli.py  test_eval_comparison.py  test_fetch_v2_external_sources.py  test_installed_studio_e2e.py  test_level1_assessment_v3.py  test_level1_target_v3.py  test_optimizer_protocol_v2.py  test_protocol_capacity_v2.py  test_protocol_web_examples.py  test_public_repository_export.py  test_public_runtime_quarantine.py  test_public_v2_distribution_boundary.py  test_public_v2_wheel_runtime.py  test_release_metadata_v2.py  test_studio_intake.py  test_studio_product.py  test_v2_contract_semantics.py  test_v2_contracts.py  test_v2_design.py  test_v2_information_run.py  test_v2_openapi_contract.py  test_v2_paper_protocol.py
web/: optimizer-protocol-example.json  protocol-capacity-example.json  v2.css  v2.html  v2.js  v2.test.js
